--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Eat Da Burger!</title>
-	<link rel="stylesheet" href="/assets/css/style.css" type="text/css">
-			<script src="https://code.jquery.com/jquery.js"></script>
+	<meta charset="UTF-8">
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<title>EAT THE BURGER!</title>
+		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/burgers.js"></script>
-</head>
-<body>
-	{{{ body }}}
-</body>
+	</head>
+	<body>
+		{{{ body }}}
+	</body>
 </html>
